@@ -4,7 +4,9 @@
   	  logging level
 	- restore support for preserving original attribute order (except
 	  for JSON object flavoured export)
-	- add hxl.Column.get_display_tag method with optional attribute sorting
+	- add hxl.Column.get_display_tag method with optional attribute
+	  sorting
+	- add support for lat/lon normalisation to clean-data filter
 
 2018-02-05 Release 4.5.1
 	- bug-fix release: do not let a misspelled date cause a fatal
